# tetsu-launcher

./: Cargo.toml  LICENSE
.well-known/: microsoft-identity-association.json
src/: auth.rs  main.rs
