[package]
name = "tetsu"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
base64 = "0.22.1"
url = "2.3"
thiserror = "2.0.17"
webbrowser = "1.0.6"
web-view = "0.7"
rand = "0.9.2"
urlencoding = "2.1.3"